src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

input, textarea {
    transition: all ease 0.3s;
}

input:focus-visible, textarea:focus-visible {
    outline: 1px solid #1180EB;
    box-shadow: 0 0 0 4px #1180EB66;
}

button, a {
    transition: all ease 0.3s;
}

button:focus-visible, a:focus-visible {
    outline: none;
    box-shadow: 0 0 0 2px #1180EB66;
}

.dflt-button {
    background-color: #fafafa;
    color: #000;
    border: 1px solid #e4e4e7;
    padding: 10px 16px;
    font-weight: 500;
    border-radius: 0.5rem;
    cursor: pointer;
    transition: all ease 0.3s;
}

.dflt-button:hover {
    background-color: #f3f4f6;
}

.embla {
    overflow: hidden;
}

.embla__container {
    display: flex;
    box-sizing: border-box;
}

@media screen and (min-width: 768px) {
    .embla__slide {
        flex: 0 0 600px;
        min-width: 0;
        margin-right: 16px;
    }
}

@media screen and (max-width: 767px) {
    .embla__slide {
        flex: 0 0 100%;
        min-width: 0;
        border-right: 0;
    }
}

.scene-container {
    left: 50%;
    transform: translateX(-50%);
}

